--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
         <h1>My Favorite Food</h1>
     </header>
 
-    <!-- SUBTITLE -->
-    <h2>Hi! Welcome to My Favorite Food. Here, you can find my favorite food from all around the world.</h2>
-
-    <!-- CONTENT -->
-    <h3><em>Choose one of the food below to see the recipe</em></h3>
-    <ul>
-        <li>
-            <a href="pages/nasi-goreng.html">Nasi Goreng</a>
-        </li>
-        <li>
-            <a href="pages/quesadilla.html">Quesadilla</a>
-        </li>
-    </ul>
+    <main>
+        <!-- SUBTITLE -->
+        <h2>Hi! Welcome to My Favorite Food. Here, you can find my favorite food from all around the world.</h2>
+    
+        <!-- CONTENT -->
+        <h3><em>Choose one of the food below to see the recipe</em></h3>
+        <ul>
+            <li>
+                <a href="pages/nasi-goreng.html">Nasi Goreng</a>
+            </li>
+            <li>
+                <a href="pages/quesadilla.html">Quesadilla</a>
+            </li>
+        </ul>
+    </main>
 
     <footer>
-        <p>Made by Samuel Lustriman Sihotang</p>
+        <small>Made by Samuel Lustriman Sihotang</small>
     </footer>
 </body>
 </html>
