--- a/pages/quesadilla.html
+++ b/pages/quesadilla.html
@@ -69,7 +69,7 @@
         <!-- LINK BACK TO HOME -->
         <a href="../index.html">Back To Home</a>
     
-        <p>Made by Samuel Lustriman Sihotang</p>
+        <small>Made by Samuel Lustriman Sihotang</small>
     </footer>
 </body>
 
