--- a/pages/nasi-goreng.html
+++ b/pages/nasi-goreng.html
@@ -67,7 +67,7 @@
         <!-- LINK BACK TO HOME -->
         <a href="../index.html">Back To Home</a>
         
-        <p>Made by Samuel Lustriman Sihotang</p>
+        <small>Made by Samuel Lustriman Sihotang</small>
     </footer>
 </body>
 </html>
