--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | My Favorite Food</title>
-</head>
-<body>
-    <!-- TITLE -->
+  </head>
+  <body>
     <header>
-        <h1>My Favorite Food</h1>
+      <!-- TITLE -->
+      <h1>My Favorite Food</h1>
     </header>
 
     <main>
-        <!-- SUBTITLE -->
-        <h2>Hi! Welcome to My Favorite Food. Here, you can find my favorite food from all around the world.</h2>
-    
-        <!-- CONTENT -->
-        <h3><em>Choose one of the food below to see the recipe</em></h3>
-        <ul>
-            <li>
-                <a href="pages/nasi-goreng.html">Nasi Goreng</a>
-            </li>
-            <li>
-                <a href="pages/quesadilla.html">Quesadilla</a>
-            </li>
-        </ul>
+      <!-- LIST -->
+      <h3><em>Choose one of the food below to see the recipe</em></h3>
+      <ul>
+        <li>
+          <a href="pages/nasi-goreng.html">Nasi Goreng</a>
+        </li>
+        <li>
+          <a href="pages/quesadilla.html">Quesadilla</a>
+        </li>
+      </ul>
     </main>
 
     <footer>
-        <small>Made by Samuel Lustriman Sihotang</small>
+      <small>Made by Samuel Lustriman Sihotang</small>
     </footer>
-</body>
+  </body>
 </html>
