move navigation to the top

--- a/pages/nasi-goreng.html
+++ b/pages/nasi-goreng.html
@@ -9,10 +9,17 @@
     <!-- TITLE -->
     <header>
       <h1>Nasi Goreng</h1>
+
+      <nav>
+        <!-- LINK BACK TO HOME -->
+        <a href="../index.html">Back To Home</a>
+      </nav>
     </header>
 
-    <!-- IMAGE -->
+    <br />
+
     <main>
+      <!-- IMAGE -->
       <img src="../images/nasi-goreng.jpg" alt="Picture of Nasi Goreng" />
 
       <br />
@@ -110,11 +117,6 @@
 
       <!-- LINK BACK TO TOP -->
       <a href="#">Back to Top</a>
-
-      <br />
-
-      <!-- LINK BACK TO HOME -->
-      <a href="../index.html">Back To Home</a>
     </main>
 
     <br />
