--- a/pages/quesadilla.html
+++ b/pages/quesadilla.html
@@ -9,7 +9,14 @@
     <!-- TITLE -->
     <header>
       <h1>Quesadilla</h1>
+
+      <nav>
+        <!-- LINK BACK TO HOME -->
+        <a href="../index.html">Back To Home</a>
+      </nav>
     </header>
+
+    <br />
 
     <main>
       <!-- IMAGE -->
@@ -78,11 +85,6 @@
 
       <!-- LINK BACK TO TOP -->
       <a href="#">Back to Top</a>
-
-      <br />
-
-      <!-- LINK BACK TO HOME -->
-      <a href="../index.html">Back To Home</a>
     </main>
 
     <br />
